--- a/customcss.theme.css
+++ b/customcss.theme.css
@@ -3,6 +3,7 @@
  * @author Naerin ( [X] to doubt )
  * @version 1
  * @description A custom CSS
+ * @updateUrl https://raw.githubusercontent.com/Nyaerin/Theme-for-Discord-1243565/master/customcss.theme.css
 */
 
 /* Import */
