--- a/customcss.theme.css
+++ b/customcss.theme.css
@@ -12,8 +12,7 @@
 @import url('https://discord-theme-addons.github.io/compact-userarea/src/support/compiled.css'); /* Compact User Area */
 @import url('https://pixelmelt.github.io/Spectra/src/oldpop.css'); /* old user popouts */
 @import url("https://raw.githack.com/NYRI4/Discolored/master/main.css"); /* colored discord SVGs */
-@import url("https://gibbu.github.io/BetterDiscord-Themes/addons/windows-titlebar.css"); /* Old New Title Bar */
-
+@import url('https://discordstyles.github.io/Addons/windows-titlebar.css'); /* Old New Title Bar */
 /* -- */
 .emojiItemDisabled-1FvFuF, .stickerUnsendable-2q_h2B {
 	-webkit-filter: none;
@@ -22,6 +21,13 @@
 
 :root {
     --version001_tatocb: none;
+}
+
+/* Fixes for User Area */
+.avatarWrapper-2yR4wp {
+	position:relative;
+	bottom: 20px;
+	left:3px;
 }
 
 /* Radial Status */
@@ -54,11 +60,6 @@
 
 /* Hide Disccord notices */
 *[class^='notice-'] { display: none !important; }
-
-/* Fixes */
-.platform-win .container-3baos1 {
-	top: 9px!important;
-}
 
 /* Remove Nitro shit, fuck discord */
 div[id="guild-header-popout-premium-subscribe"], .separator-2I32lJ, .wrapper-3nSjSv, .heading-3VWlBM, div[class="colorStandard-2KCXvj size16-1P40sf"], div[aria-label="Discord Nitro"], div[class="upsellWrapper-1utsSD"], a[href="/store"], 
@@ -94,10 +95,6 @@ div[aria-controls="billing-tab"], div[aria-controls="nitro-server-boost-tab"], p
 	position:relative;
 	right: 28.5%;
 	top: 38px;
-}
-
-.avatar-1BDn8e.clickable-1bVtEA {
-	border-radius: 5px;
 }
 
 .expandedFolderBackground-1cujaW {
@@ -157,7 +154,8 @@ div[class="bd-changelog-button"], div[class="socialLinks-3jqNFy"], .formNotice-2
 	position:relative;
 	width: 50px;
 	height: 50px;
-	left:225px
+	left:190px;
+	bottom: 45px;
 }
 
 .textArea-1Lj-Ns, .inputDefault-_djjkz {
@@ -168,3 +166,62 @@ div[class="bd-changelog-button"], div[class="socialLinks-3jqNFy"], .formNotice-2
 	position: relative;
 	left:20px
 }
+
+.wordmarkWindows-1v0lYD {
+	visibility:hidden;
+}
+
+/* Chat */
+
+.container-3FojY8 {
+    padding: 2px 15px 2px 160px;
+    overflow: visible;
+}
+
+.avatar-1BDn8e {
+    margin:0px 0px 0px -50px!important;
+    width: 65px !important;
+    height: 65px !important;
+    border: 3px solid lightgray;
+    border-radius:5px;
+	left:53px;
+    
+}
+
+.cozyMessage-3V1Y8y.groupStart-23k01U {
+    padding-top: 35px;
+}
+
+.mentioned-xhSam7:before {
+	visibility:hidden;
+}
+
+.cozy-3raOZG .messageContent-2qWWxC, .username-1A8OIy {
+	left: 10px;
+}
+
+span[class="timestamp-3ZCmNB timestampInline-yHQ6fX"] {
+	padding-left:5px!important;
+}
+
+.mentioned-xhSam7 {
+	background: none;
+}
+
+.container-1ov-mD {
+	left: 10px;
+}
+
+.appMount-3lHmkl{
+	border: 4px solid violet;
+	border-top: none
+}
+
+.scrollableContainer-2NUZem {
+	background: transparent;
+}
+
+/* Hide Scrollbar */
+.chat-3bRxxu ::-webkit-scrollbar-track-piece, 
+.chat-3bRxxu ::-webkit-scrollbar-track { visibility:hidden;}
+.chat-3bRxxu ::-webkit-scrollbar-thumb{ visibility:hidden; }
