--- a/customcss.theme.css
+++ b/customcss.theme.css
@@ -3,6 +3,8 @@
  * @author Naerin ( [X] to doubt )
  * @version 1
  * @description A custom CSS
+ * authorId 594952565058306193
+ * @source https://github.com/Nyaerin/Theme-for-Discord-1243565
  * @updateUrl https://raw.githack.com/Nyaerin/Theme-for-Discord-1243565/master/customcss.theme.css
  * @downloadUrl https://raw.githack.com/Nyaerin/Theme-for-Discord-1243565/master/customcss.theme.css
 */
